<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CropActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/buttonSelectPhoto"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/select_photo" />

            <Button
                android:visibility="gone"
                android:id="@+id/buttonTakePhotoPhoto"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/take_photo" />


        </LinearLayout>

        <ImageView
            android:id="@+id/image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="#000000"
            android:padding="1dp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnAddPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/detect_disease" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>