<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/etServerIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ip_address_system"
            android:text="192.168.43.240" />

        <Button
            android:id="@+id/btnConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif-medium"
            android:text="@string/connect_to_server"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/btnChangeLang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnRegister"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="20dp"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif-medium"
            android:padding="5dp"
            android:text="@string/change_language"
            android:textColor="#FFF"
            android:textStyle="bold"
            tools:visibility="gone" />
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="B1 PROJECT -2023"
            android:textSize="24dp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>